# Telco_Cyber_Chat

./: .env  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: playbook_update.yml
frontend/: config.local.js  config.template.js  index.html
scripts/: playbook_update.py
src/telco_cyber_chat/: __init__.py  auth.py  embbed_loader.py  embed_loader.py  graph.py  llm_loader.py  pyproject.toml  reranker_loader.py
src/telco_cyber_chat/playbook/: DOMAIN_TELCO.md  EXAMPLES.md  LEARNED_RULES.md  SAFETY.md  SYSTEM.md  TOOL_USE.md  playbook_loader.py  playbook_update.py  playbook_update.yml
src/telco_cyber_chat/webscraping/: __init__.py  cisco_scraper.py  ericsson_scraper.py  huawei_scraper.py  ingest_pipeline.py  mitre_attack_scraper.py  node_builder.py  node_embed.py  node_embedder.py  nokia_scraper.py  qdrant_ingest.py  scrape_core.py  scrape_orchestrator.py  scraper_graph.py  variot_scraper.py
src/telco_cyber_chat/websearcher/: __init__.py  chunker.py  cli.py  config.py  crawler.py  download_drive_pdfs.py  drive.py  embed_websearcher.py  llamaparse_url.py  pipeline.py  qdrant_doc_stats.py  requirements.txt  websearcher_graph.py  websearcher_qdrant.py
