# pyproject.toml (ROOT)
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-cyber-chat"
version = "0.1.0"
dependencies = [
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "qdrant-client>=1.7.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "langsmith>=0.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
